fix overflow

--- a/static/global.sass
+++ b/static/global.sass
@@ -3,6 +3,7 @@
     padding: 0
     font-family: 'Josefin Sans', sans-serif
     line-height: 1.5rem
+    overflow: hidden
 
 
 h1
